--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -163,3 +163,19 @@ input {
   border: 1px solid rgb(202, 201, 200);
 }
 
+@media (max-width: 800px) {
+
+#tela{
+  overflow-y: scroll;
+}
+
+
+  #infosPokedex{
+    display:flex;
+    flex-direction: column;
+    
+  }
+  
+
+
+}
